--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,10 @@ body {
     margin-bottom: 50px;
 }
 
+.hide {
+    display: none;
+}
+
 #header {
     color: mediumseagreen;
 }
@@ -21,6 +25,10 @@ body {
 #login-form {
     border: black 2px solid;
     padding: 50px;
+}
+
+#login-success-message {
+    color: mediumseagreen;
 }
 
 input {
